--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
     /> -->
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>My Project</title>
+    <title>Form Input Wave</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <h1>Please Login</h1>
+      <form action="">
+        <div class="form-control">
+          <input type="text" required />
+          <label for="">Email</label>
+        </div>
+        <div class="form-control">
+          <input type="password" required />
+          <label for="">Password</label>
+        </div>
+
+        <button class="btn">Login</button>
+        <p class="text">Don't Have an account? <a href="#">Register</a></p>
+      </form>
+    </div>
   </body>
 </html>
